Stabilize startup path and test suite